2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/NUnitAssemblyTestSuite.cs: Track api changes.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/NUnitService.cs:
	* Gui/NUnitAssemblyGroupNodeBuilder.cs:
	* Gui/NUnitAssemblyGroupConfigurationNodeBuilder.cs: Use the
	  new DesktopService instead of PlatformService.

2009-06-18  Lluis Sanchez Gual  <lluis@novell.com>

	* Services\ExternalTestRunner.cs:
	* Services\NUnitAssemblyTestSuite.cs: In some cases MS.NET
	  can't properly resolve assemblies even if they are already
	  loaded. For example, when deserializing objects from
	  remoting. Added a handler for AssemblyResolve that handle
	  this case.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Project\NUnitAssemblyGroupFileFormat.cs: Use the new
	  FilePath class for handling file and directory paths.

2009-05-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/NUnitTestCase.cs:
	* Services/NUnitTestSuite.cs: Implement OnCanRun for NUnit
	  tests and test suites.

	* Services/UnitTestGroup.cs: A test suite can be run using a
	  specific mode if all child tests can.

	* Gui/TestPad.cs: Improve support for using a custom execution
	  mode.

2009-05-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelopNUnit.addin.xml: Added Run Test With submenu,
	  with support for all registered modes.

	* Gui/TestPad.cs:
	* Services/UnitTest.cs:
	* Services/TestContext.cs: Track api changes.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelopNUnit.addin.xml: Changed copyright tag.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* AssemblyInfo.cs: Changed assembly info.

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* Gui/TestResultsPad.cs: Renamed PixbufService to
	  ImageService.

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* Gui/TestResultsPad.cs: Track API changes.

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.NUnit.csproj: don't require specific
	gtk-sharp version.
